components/mm1-sup/src/mixed/strategy/all_for_one/snapshots/mm1_sup__mixed__strategy__all_for_one__tests__mixed::strategy::all_for_one::tests::run::add_started_remove.snap
---
source: components/mm1-sup/src/mixed/strategy/all_for_one/tests.rs
expression: report
---
- "RestartIntensity { max_restarts: 0, within: 18446744073709551615.999999999s }"
- "ADD     [one|Permanent]"
- DECIDE
- ">>> Start(one)"
- "STARTED [one] / <:1>"
- "RM      [one]"
- "!!! ERROR: operation unsupported"
